feat (api): добавил модуль Ping
Meta: #98049
